--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,11 @@ REFRESH_TOKEN_EXPIRATION_HOURS=720
 # Authentication Configuration
 MIN_PASSWORD_LENGTH=8
 REMEMBER_ME_MULTIPLIER=24
+
+# Google Maps API Configuration
+GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
+
+# Geocoding Configuration
+GEOCODING_COUNTRY=India
+GEOCODING_COUNTRY_CODE=in
+GEOCODING_RESULT_LIMIT=10
