--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pyjwt = "^2.8.0"
 bcrypt = "^4.1.0"
 pydantic = {extras = ["email"], version = "^2.5.0"}
 pymysql = "^1.1.0"
+cryptography = "^41.0.0"
 pytz = "^2024.1"
 flask-cors = "^6.0.2"
 tzdata = "^2025.3"
