--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytz = "^2024.1"
 flask-cors = "^6.0.2"
 tzdata = "^2025.3"
 boto3 = "^1.35.0"
+gunicorn = "^25.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
