--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
     region: oregon
     branch: main
     healthCheckPath: /health
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -14,6 +15,8 @@ services:
       - key: FLASK_ENV
         value: production
       - key: SECRET_KEY
+        generateValue: true
+      - key: JWT_SECRET_KEY
         generateValue: true
       - key: PORT
         value: 5000
