--- a/render.yaml
+++ b/render.yaml
@@ -14,12 +14,22 @@ services:
           property: connectionString
       - key: FLASK_ENV
         value: production
+      - key: ENVIRONMENT
+        value: production
       - key: SECRET_KEY
         generateValue: true
       - key: JWT_SECRET_KEY
         generateValue: true
       - key: PORT
         value: 5000
+      - key: R2_ACCESS_KEY
+        sync: false
+      - key: R2_SECRET_KEY
+        sync: false
+      - key: R2_ENDPOINT
+        sync: false
+      - key: R2_BUCKET
+        sync: false
 
 databases:
   - name: ceremo-db
